--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <html>
 
 <head>
-<title>clubroom</title>
+<title>enter a password</title>
 </head>
 
 <ul>
   <li><a href="clubroom.html">동아리실</a></li>
-  <li><a href="비밀번호입력페이지.html">비밀번호입력페이지</a></li>
 </ul>
 
 <body>
 
-<img src='./images/동아리실.png' alt='동아리실' title='추리반 동아리실' width='100%'/>
 
+<img src='./images/도어락.jpg' width='500'/><br/>
+<p>▼동아리실 비밀번호 입력</p>
+<form action='clubroom.html'>
+ password : <input id='pwd' type='password' maxlength='6'/>
+ <input type='submit' value='입력'>
+</form>
 
+</body>
+</html>
 </body>
 </html>
