--- a/clubroom.html
+++ b/clubroom.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<img src='동아리실.png' alt='동아리실' title='추리반 동아리실' width='100%'/>
+<img src='./images/동아리실.png' alt='동아리실' title='추리반 동아리실' width='100%'/>
 
 
 </body>
